--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
 	</div>
 
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-		<a class="navbar-brand" href="#">Navbar</a>
+		<a class="navbar-brand" href="#">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
+					<a class="nav-link" href="#">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
+					<a class="nav-link" href="#">Contact Us</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
+					<a class="nav-link" href="#">News</a>
 				</li>
 			</ul>
 		</div>
@@ -43,8 +43,8 @@
 	<div class="container" style="margin-top:30px">
 		<div class="row">
 			<div class="col-sm-4">
-				<h2>About Me</h2>
-				<h5>Photo of me:</h5>
+				<h2>About Our Team</h2>
+				<h5>Photo:</h5>
 				<div class="fakeimg">Fake Image</div>
 				<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
 				<h3>Some Links</h3>
@@ -66,8 +66,8 @@
 				<hr class="d-sm-none">
 			</div>
 			<div class="col-sm-8">
-				<h2>TITLE HEADING</h2>
-				<h5>Title description, Dec 7, 2017</h5>
+				<h2>Map</h2>
+				<h5>Trash days and Dump</h5>
 				<div class="fakeimg">Fake Image</div>
 				<p>Some text..</p>
 				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
