--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+		integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+		crossorigin="" />
+	<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+		integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+		crossorigin=""></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -17,7 +23,7 @@
 
 	<div class="jumbotron text-center" style="margin-bottom:0">
 		<h1>Leaf Green Footprints </h1>
-		<p>  Where can you dump your trash???</p>
+		<p> Where can you dump your trash???</p>
 	</div>
 
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -45,7 +51,11 @@
 			<div class="col-sm-4">
 				<h2>About Our Team</h2>
 				<h5>Photo:</h5>
-				<div class="fakeimg">Fake Image</div>
+				<div class="fakeimg">Trash Areas
+					<div id="mapid">
+
+					</div>
+				</div>
 				<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
 				<h3>Some Links</h3>
 				<p>Lorem ipsum dolor sit ame.</p>
@@ -65,10 +75,13 @@
 				</ul>
 				<hr class="d-sm-none">
 			</div>
+
 			<div class="col-sm-8">
 				<h2>Map</h2>
 				<h5>Trash days and Dump</h5>
+
 				<div class="fakeimg">Fake Image</div>
+
 				<p>Some text..</p>
 				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
 					eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -89,6 +102,64 @@
 		<p>Footer</p>
 	</div>
 
+
 </body>
+<script>
+
+
+
+	var mymap = L.map('mapid').setView([38.97782697554026, -76.94927215576172], 13);
+
+	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+		maxZoom: 18,
+		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		id: 'mapbox.streets'
+	}).addTo(mymap);
+
+	L.marker([51.5, -0.09]).addTo(mymap)
+		.bindPopup("<b>Hello world!</b><br />I am a popup.");
+
+	L.circle([51.5, -76.94927], 500, {
+		color: 'red',
+		fillColor: '#f03',
+		fillOpacity: 0.5
+	}).addTo(mymap).bindPopup("I am a circle.");
+
+	/*
+		L.polygon([
+			[51.509, -0.08],
+			[51.503, -0.06],
+			[51.51, -0.047]
+		]).addTo(mymap).bindPopup("I am a polygon.");
+	
+	*/
+	var popup = L.popup();
+
+	function onMapClick(e) {
+		popup
+			.setLatLng(e.latlng)
+			.setContent("You clicked the map at " + e.latlng.toString())
+			.openOn(mymap);
+	}
+
+	mymap.on('click', onMapClick);
+
+	var greenIcon = L.icon({
+		iconUrl: 'leaf-green.png',
+		shadowUrl: 'leaf-shadow.png',
+
+		iconSize: [38, 95], // size of the icon
+		shadowSize: [50, 64], // size of the shadow
+		iconAnchor: [22, 94], // point of the icon which will correspond to marker's location
+		shadowAnchor: [4, 62],  // the same for the shadow
+		popupAnchor: [-3, -76] // point from which the popup should open relative to the iconAnchor
+	});
+
+	L.marker([38.97782697554026, -76.94927215576172], { icon: greenIcon }).addTo(map);
+</script>
+
+
 
 </html>
