--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Contact Us</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">News</a>
-				</li>
+				
 			</ul>
 		</div>
 	</nav>
@@ -50,14 +48,14 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<h2>About Our Team</h2>
-				<h5>Photo:</h5>
+				<h5>College Park Trash:</h5>
 				<div class="fakeimg">Trash Areas
 					<div id="mapid">
 
 					</div>
 				</div>
-				<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-				<h3>Some Links</h3>
+				<p>UMD is Dirty lol</p>
+				<h3>How can we improve </h3>
 				<p>Lorem ipsum dolor sit ame.</p>
 				<ul class="nav nav-pills flex-column">
 					<li class="nav-item">
@@ -83,17 +81,13 @@
 				<div class="fakeimg">Fake Image</div>
 
 				<p>Some text..</p>
-				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-					eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-					exercitation ullamco.</p>
+				<p>Discription</p>
 				<br>
 				<h2>TITLE HEADING</h2>
 				<h5>Title description, Sep 2, 2017</h5>
 				<div class="fakeimg">Fake Image</div>
 				<p>Some text..</p>
-				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-					eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-					exercitation ullamco.</p>
+				<p>Discription  .</p>
 			</div>
 		</div>
 	</div>
