--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 				<h2>Map</h2>
 				<h5>Trash days and Dump</h5>
 
-				<div class="fakeimg">Fake Image</div>
+				<div class="fakeimg">Image</div>
 
 				<p>Some text..</p>
 				<p>Discription</p>
 				<br>
 				<h2>TITLE HEADING</h2>
 				<h5>Title description, Sep 2, 2017</h5>
-				<div class="fakeimg">Fake Image</div>
+				<div class="fakeimg"> Image</div>
 				<p>Some text..</p>
 				<p>Discription  .</p>
 			</div>
@@ -93,7 +93,7 @@
 	</div>
 
 	<div class="jumbotron text-center" style="margin-bottom:0">
-		<p>Footer</p>
+		<p>Clean </p>
 	</div>
 
 
